name:                       mxnet-cocoapi
version:                    0.0.1.0
synopsis:                   To work with cocodataset with cocoapi
description:                Haskell binding for the cocoapi in c
homepage:                   http://github.com/pierric/mxnet-cocoapi
license:                    BSD3
license-file:               LICENSE
author:                     Jiasen Wu
maintainer:                 jiasenwu@hotmail.com
copyright:                  Copyright: (c) 2019 Jiasen Wu
category:                   Machine Learning, AI
build-type:                 Simple
cabal-version:              >= 1.24
extra-source-files:         cbits/*.h, cbits/*.c

Library
    exposed-modules:        MXNet.Coco
    other-modules:          MXNet.Coco.Raw
    hs-source-dirs:         src
    ghc-options:            -Wall
    default-language:       Haskell2010
    default-extensions:     GADTs, 
                            TypeFamilies,
                            OverloadedLabels
    build-depends:          base >= 4.7 && < 5.0
                          , storable-tuple
                          , mxnet-base
                          , mxnet-ops
                          , vector >= 0.12
                          , mtl >= 2.2
                          , lens >= 4.12
                          , transformers-base >= 0.4.4
                          , aeson >= 1.2
                          , containers >= 0.5
                          , bytestring >= 0.10
                          , exceptions >= 0.8.3
                          , time < 2.0
    extra-libraries:     mxnet
    Build-tools:         c2hs
    c-sources:           cbits/maskApi.c
    include-dirs:        cbits/
    includes:            maskApi.h
